[tool.poetry]
name = "adit"
version = "0.1.0"
description = "An end-to-end workflow for developing and testing machine learning model in distributed environment"
authors = ["Trinh Tran <trinhtran2151995@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.2.0"
fxcmpy = "^1.2.6"
python-socketio = "^4.6.0"
pandas = "^1.0.4"
xarray = "^0.15.1"
dash = {extras = ["complete"], version = "^1.12.0"}
dask = {extras = ["complete"], version = "^2.17.2"}
pyarrow = "^0.17.1"
fastparquet = "^0.4.0"
stumpy = "^1.3.1"
tsfresh = "^0.16.0"
featuretools = "^0.15.0"
fastapi = "^0.55.1"
uvicorn = "^0.11.5"
pyspark = "^2.4.5"
oandapyV20 = "^0.6.3"
v20 = "^3.0.25"
distributed = "^2.18.0"
click = "^7.1.2"
tinydb = "^4.1.1"
pickledb = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
